[package]
name = "noteblock-music"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow"] }
lewton = "0.10.2"
rfd = "0.15.4"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
serde = "1.0.228"
serde_json = "1.0.145"
